--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "uploadthing": "^7.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint": "^9.22.0",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1"
